# LognLook

./: .gitignore  LICENSE  NOTICE  README.md  package-lock.json
server/: .env.sample  .gitignore  .python-version  pyproject.toml  requirements.txt
server/app/: main.py
server/app/api/: deps.py
server/app/api/routers/: elasticsearch.py  log.py  pipeline.py  project.py  trouble.py  user.py  users.py
server/app/core/config/: dependencies.py  elastic_config.py  opensearch_config.py  settings.py
server/app/core/enums/: LLMProvider.py  language.py  log_filter.py  roles.py
server/app/core/llm/: base.py  exceptions.py  prompts.py
server/app/core/llm/providers/: __init__.py  anthropic_provider.py  base_provider.py  huggingface_provider.py  (+2 more)
server/app/core/utils/: auth.py  log_utils.py  roles_utils.py  time_utils.py
server/app/crud/: elasticsearch.py  pipeline.py  project.py  user.py
server/app/db/: session.py
server/app/infra/database/: elasticsearch.py  elaticsearch.py  opensearch.py  session.py
server/app/models/: __init__.py  notification.py  project.py  project_setting.py  trouble.py  trouble_log.py  user.py  user_project.py  users.py
server/app/repositories/: elastic.py  elasticsearch.py  opensearch.py  project.py  trouble.py  user.py
server/app/schemas/: project.py  trouble.py  user.py  users.py
server/app/services/: log.py  pipeline.py  project.py  trouble.py  user.py
server/test/core/config/: test_elastic_config.py  test_opensearch_config.py
server/test/core/llm/: test_llm_factory.py  test_providers.py
server/test/integration/: test_basic_functionality.py
server/test/log/: test_get_log.py
server/test/services/: test_multi_llm_integration.py
server/test/trouble/: test_api_create_trouble.py  test_api_delete_trouble.py  test_api_update_trouble.py  test_create_trouble.py  test_delete_trouble.py  test_get_project_troubles.py  test_get_trouble.py  test_update_trouble.py
(+102 files in other folders)
