[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
# readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "cffi (==1.17.1)",
    "click (==8.1.8)",
    "cryptography (==44.0.3)",
    "dnspython (==2.7.0)",
    "email-validator (==2.2.0)",
    "fastapi (==0.115.12)",
    "h11 (==0.14.0)",
    "httptools (==0.6.4)",
    "idna (==3.10)",
    "pip (==25.0.1)",
    "pycparser (==2.22)",
    "pydantic-core (==2.33.1)",
    "pymysql (==1.1.1)",
    "python-dotenv (==1.1.0)",
    "pyyaml (==6.0.2)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.40)",
    "sqlmodel (==0.0.24)",
    "starlette (==0.46.1)",
    "typing-extensions (==4.13.1)",
    "typing-inspection (==0.4.0)",
    "uvicorn (==0.34.0)",
    "uvloop (==0.21.0)",
    "watchfiles (==1.0.4)",
    "websockets (==15.0.1)",
    "mysql (>=0.0.3,<0.0.4)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "openai (>=1.72.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "elasticsearch (==8.17.1)",
    "pytest (>=8.3.5,<9.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "langchain-anthropic (>=0.3.18,<0.4.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
